--- a/server/views/dashboard.ejs
+++ b/server/views/dashboard.ejs
@@ -64,7 +64,7 @@
 };
 const readMail = function(){
   console.log("read is running");
-  let email = 'yash919bansal@gmaail.com';
+  let email = 'yash919bansal@gmail.com';
   let messageId = '191bba95110ffc5c'
   fetch(`http://localhost:3000/api/mail/read-mail/${email}/message/${messageId}`)
   .then(response => {
